--- a/package.json
+++ b/package.json
@@ -1,20 +1,47 @@
 {
-  "name": "benfords-law-covid",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "name": "client",
+  "version": "0.1.0",
+  "proxy": "http://localhost:5000",
+  "private": true,
   "dependencies": {
-    "@types/express": "^4.17.7",
-    "@types/puppeteer": "^3.0.1",
-    "express": "^4.17.1",
-    "puppeteer": "^5.2.1"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/styled-components": "^5.1.2",
+    "polished": "^3.6.6",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "styled-components": "^5.1.1",
+    "typescript": "~3.7.2"
   },
   "scripts": {
-    "build": "tsc",
-    "dev:server": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "ts-node-dev": "^1.0.0-pre.61",
-    "typescript": "^4.0.2"
+    "@types/react-router-dom": "^5.1.5"
   }
 }
