--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/d3-shape": "^1.3.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-vis": "^1.11.3",
+    "@types/recharts": "^1.8.14",
     "@types/styled-components": "^5.1.2",
     "axios": "^0.20.0",
     "polished": "^3.6.6",
@@ -18,8 +21,11 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-vis": "^1.11.7",
+    "recharts": "^1.8.5",
     "styled-components": "^5.1.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "victory": "^35.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
