--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "re-resizable": "^6.5.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-vis": "^1.11.7",
